# datapos-connector-file-store-emulator

./: .env.json  .eslintrc.json  .gitignore  .prettierrc  LICENSE.md  LICENSES.json  README.md  config copy.json  config.json  eslint.config.js  eslint.config.ts  gruntPluginHelpers.js  gruntPluginHelpers_1.js  gruntfile.js  package-lock.json  package.json  rollup.config-cjs.js  rollup.config-cjs.mjs  rollup.config-es.js  rollup.config-es.mjs  rollup.config-iife.js  rollup.config-iife.mjs  rollup.config-umd.js  rollup.config-umd.mjs  tsconfig.json  vite.config.ts
bundle-analysis-reports/rollup-visualiser/: index.html
bundle-analysis-reports/sonda/: index.html
dependency-check-reports/: dependency-check-report.html  dependency-check-report.json
dist copy/: datapos-connector-data-file-store-emulator-es.js
dist copy/src/: index.d.ts
licenses/: licenseTree.json  licenses.json
licenses/downloads/: licenses.ext.json
rust/datapos-connector-file-store-emulator-core/: Cargo.toml
rust/datapos-connector-file-store-emulator-core/src/: lib.rs
src/: common.ts  config.json  connector.json  description.md  fileStoreIndex.json  index.md  index.ts  retrieveRecordsHelper.ts  rustBridge.ts
src/types/: rustBindings.d.ts
stats/: index.html
